Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriTextRetObject.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        text two = "green"
        Yoda<Text, text, Object> yoda
        Object ret = yoda:useForce(one, two)
        output "passed"
     end
end
