Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriTextRetTextObjFail.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        text two = "green"
        Yoda<Text, text, Text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
